--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "@quixo3/prisma-session-store": "^3.1.13",
+    "@supabase/supabase-js": "^2.49.1",
     "bcryptjs": "^3.0.2",
     "connect-pg-simple": "^10.0.0",
     "date-fns": "^4.1.0",
