--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^6.5.0",
     "@quixo3/prisma-session-store": "^3.1.13",
     "@supabase/supabase-js": "^2.49.1",
     "bcryptjs": "^3.0.2",
@@ -23,12 +24,13 @@
     "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pg": "^8.13.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.9",
-    "prisma": "^6.4.1"
+    "prisma": "^6.5.0"
   }
 }
